--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>unreadmn</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <P>iafijfiejifjwef</P>
+    <P >iafijfiejifjwef</P>
     <h1>bgaisfijiwqo</h1>
+    <div class="hero">
+    </div>
 </body>
 </html>
