--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
 
-          <div class="matgaash-orno">
+          <div class="margaash-orno">
             <h5> Дараагийн нийтлэл:  Мэдүүштэй </h5>
           </div>
            
@@ -92,6 +92,27 @@
 
 </section>
 </main>
+
+
+
+<section class="two">
+
+
+<div>
+  <h6>Редакцын сонголт</h6>
+</div>
+
+
+
+<div class="pictures">
+ 
+  <a class="zurag-1"><img src="figure.png"></a>
+  <a class="zurag-2"><img src="figure.png"></a>
+  <a class="zurag-3"><img src="figure.png"></a>
+  <a class="zurag-4"><img src="figure.png"></a>
+  <a class="zurag-5"><img src="figure.png"></a>
+</div>
+</section>
 
 
 
