--- a/unread.html
+++ b/unread.html
@@ -160,7 +160,8 @@
 
 
 
-<div>
+<div class="too-garchig">
+
     <div class="card">
       <div style="margin-top: 45px"></div>
       <div style="display: flex; align-items: center">
@@ -177,7 +178,7 @@
 
 
 
-<div>
+<div class="too-zurag">
           <div class="card-animation">
             <p>Мэдүүштэй</p>
           </div>
@@ -188,6 +189,7 @@
           border-radius: 50px 0px 0px 0px;
           opacity: 0px;">
 </div>
+
       </div>
 
 
